<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/remTimeHeader"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:labelFor="@+id/remTimeEdit"
        android:gravity="center_horizontal"
        android:text="@string/remTimeLabel"
        android:textSize="16sp" />
    
     <EditText
        android:id="@+id/remTimeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remTimeHeader"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:ems="10"
        android:inputType="time"
        android:onClick="onReminderTimeClicked"
        android:padding="3dp" />

    <TextView
        android:id="@+id/groupHeader"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/remTimeEdit"
        android:paddingTop="5dp"
        android:gravity="center_horizontal"
        android:labelFor="@+id/grpExpList"
        android:text="@string/groupLabel"
        android:textSize="15sp" />
    
    <ExpandableListView
        android:id="@+id/groupExpList"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/prefSaveBtn"
        android:layout_below="@+id/groupHeader" />

    <Button
        android:id="@+id/addGrpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:visibility="visible"
        android:onClick="onAddGrpBtnClicked"
        android:text="@string/addGrp" />
    
    <Button
        android:id="@+id/prefSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:visibility="visible"
        android:onClick="onPrefSaveBtnClicked"
        android:text="@string/savePrefs" />

</RelativeLayout>
